Revert "Merge branch 'console-v0.3.1' into phone-number-length"
This reverts commit bf0924bf67b590760ece59d1941b9b8926bfdadb, reversing
changes made to fc08f379d731fd4318dee49d0fc38ec81dc0ccd5.